# Airdrop-Program

airdrop/: Anchor.toml  package-lock.json  package.json
airdrop/programs/airdrop/: Cargo.toml
airdrop/programs/airdrop/src/: lib.rs
airdrop/tests/: airdrop.ts
generic_airdop/: Anchor.toml
generic_airdop/programs/generic_airdop/: Cargo.toml
generic_airdop/programs/generic_airdop/src/: lib.rs
generic_airdop/tests/: generic_airdop.ts
native_airdrop/: Cargo.toml
native_airdrop/src/: lib.rs
